--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="container hero__inner">
         <h2 class="hero__title">お部屋も心も、<br>すっきり整う</h2>
         <p class="hero__subtitle">
-          プロの整理収納アドバイザーがあなたの暮らしをサポートします。<br>初回カウンセリング無料！
+          プロの整理っっっg収納アドバイザーがあなたの暮らしをサポートします。<br>初回カウンセリング無料！
         </p>
         <a href="#contact" class="btn btn--primary">無料で相談する</a>
       </div>
